Fixed: CSS for chat card flavor-text was unreadable on light background.

--- a/styles/scss/block/_base.scss
+++ b/styles/scss/block/_base.scss
@@ -11,6 +11,11 @@ a.content-link{
     border: none;
   }
 
+
+  .chat-message .message-header .flavor-text{
+    color: $header-1;
+  }
+
 //pause spinner
 
 #pause {
